# remix-axum

./: .envrc.example  .gitignore  Cargo.toml  LICENSE  README.md  components.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.js
app/: root.tsx
app/components/: nav.tsx
app/routes/: _index.tsx  about.tsx  me.tsx
app/types/: server.ts
common-types/: Cargo.toml
common-types/src/: lib.rs
server/: Cargo.toml  build.rs
server/src/: routes.rs  state.rs
server/src/routes/: user_routes.rs
src/: main.rs  routes.rs  state.rs
src/routes/: auth_routes.rs  middleware.rs  user_routes.rs
