[package]
name = "remix-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version="0.7.7", features=["macros"]}
serde = {version="1.0.210", features=["derive"]}
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
