[package]
name = "remix-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = {version="0.7.7", features=["macros"]}
axum-extra = {version="0.9.4", features=["cookie"]}
jsonwebtoken = "9.3.0"
reqwest = {version="0.12.8", features=["json"]}
serde = {version="1.0.210", features=["derive"]}
serde_json = "1.0.132"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
